--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,20 @@
-certifi==2023.7.22
-chardet==4.0.0   
-idna==3.4
-Jinja2==3.1.2
-jinja2-cli==0.7.0
-MarkupSafe==2.1.3
-numpy==1.23.2    
-pandas==1.5.3    
-psycopg2-binary==2.9.8
-python-dateutil==2.8.2
-pytz==2023.3
-PyYAML==6.0.1
-requests==2.31.0
-six==1.16.0
-urllib3==1.26.16
-natsort==8.4.0
-tabulate==0.9.0
-packaging==23.2
-sqlparse==0.4.4
-asyncpg==0.29.0
+certifi
+chardet
+idna
+Jinja2
+jinja2-cli
+MarkupSafe
+numpy   
+pandas   
+psycopg2-binary
+python-dateutil
+pytz
+PyYAML
+requests
+six
+urllib3
+natsort
+tabulate
+packaging
+sqlparse
+asyncpg
